--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "astro": "^5.3.0",
-    "motion": "^12.4.7"
+    "motion": "^12.4.7",
+    "sharp": "^0.33.5"
   }
 }
