--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.18.0",
     "astro": "^5.3.0",
     "motion": "^12.4.7",
     "sharp": "^0.33.5"
