--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "astro": "^5.3.0",
     "motion": "^12.4.7",
     "sharp": "^0.33.5"
+  },
+  "devDependencies": {
+    "@rollup/plugin-alias": "^5.1.1"
   }
 }
